--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.2.1",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
